| Bug #11331 | "Warning: could not add log destination" message does not provide enough info | ||
|---|---|---|---|
| Submitted: | 14 Jun 2005 23:54 | Modified: | 20 Jan 2006 15:34 |
| Reporter: | Jonathan Miller | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1-> | OS: | Linux (Linux) |
| Assigned to: | Bugs System | Target Version: | |
[14 Jun 2005 23:54]
Jonathan Miller
[13 Jan 2006 1:42]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/1008
[18 Jan 2006 1:50]
Stewart Smith
Pushed to 4.1.18 Will appear in a 5.0 tree when people merge their csets. at time of pushing to 4.1.18, 5.0 was at 5.0.19.
[20 Jan 2006 15:34]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 4.1.18 and 5.1.19 changelogs.
Will this also be in 5.1.6?
[20 Jan 2006 15:37]
Jon Stephens
Documented in changelog for 5.0.19, not 5.1.19.
